--- a/parts/user-registration/Makefile
+++ b/parts/user-registration/Makefile
@@ -36,11 +36,9 @@ install: installdirs
 	$(INSTALL_DATA) -t $(DESTDIR)$(datarootdir)/puavo-conf/definitions \
 		puavo-user-registration.json
 	$(INSTALL_DATA) -t $(DESTDIR)$(datarootdir)/puavo-user-registration \
+		background.jpg \
+		puavo-user-registration.css \
 		puavo-user-registration.glade
-	$(INSTALL_DATA) -t $(DESTDIR)$(datarootdir)/puavo-user-registration.css \
-		puavo-user-registration.css
-	$(INSTALL_DATA) -t $(DESTDIR)$(datarootdir)/background.jpg \
-		background.jpg
 	$(INSTALL_DATA) -t $(DESTDIR)$(datarootdir)/locale/fi/LC_MESSAGES \
 		po/fi/puavo-user-registration.mo
 
