Fix calls to admin-remote-connections (from puavo-desktop-applet) by adding the user to the same set of groups when using "nodm". Might also fix some things in "webkiosk"-mode and maybe others.

--- a/rules/supplementary_groups/templates/group.conf
+++ b/rules/supplementary_groups/templates/group.conf
@@ -1,2 +1,3 @@
 gdm-autologin; *; *; Al0000-2400; <%= scope.lookupvar('::supplementary_groups::groups').join(', ') %>
 gdm-password;  *; *; Al0000-2400; <%= scope.lookupvar('::supplementary_groups::groups').join(', ') %>
+nodm;          *; *; Al0000-2400; <%= scope.lookupvar('::supplementary_groups::groups').join(', ') %>
