--- a/debs/wine/debian/control.in
+++ b/debs/wine/debian/control.in
@@ -7,8 +7,8 @@ Uploaders:
  Michael Gilbert <mgilbert@debian.org>,
  Stephen Kitt <skitt@debian.org>,
  Jens Reyer <jre.winesim@gmail.com>,
-Vcs-Git: https://salsa.debian.org/wine-team/wine.git
-Vcs-Browser: https://salsa.debian.org/wine-team/wine
+Vcs-Git: https://salsa.debian.org/wine-team/wine.git -b buster
+Vcs-Browser: https://salsa.debian.org/wine-team/wine/tree/buster
 Standards-Version: 4.3.0
 Rules-Requires-Root: no
 Build-Depends:
@@ -30,7 +30,7 @@ Build-Depends:
  fontforge-nox,
  khronos-api (>= 4.6),
  unicode-data (>= 11),
- unicode-data (<< 12),
+ unicode-data (<< 13),
  libxi-dev,
  libxt-dev,
  libxmu-dev,
