Install "mousepad" (because included in DigabiOS).

--- a/rules/puavomenu/templates/menudata/50-default.yml
+++ b/rules/puavomenu/templates/menudata/50-default.yml
@@ -476,6 +476,8 @@ programs:
         tags: default
   - mimio-notebook:
         tags: default
+  - mousepad:
+        tags: default
   - mscore:
         name:
             en: MuseScore-music composition & notation
@@ -1050,6 +1052,7 @@ menus:
             - gnome-calculator
             - speedcrunch
             - org.gnome.gedit
+            - mousepad
             - gucharmap
             - onboard
             - brasero
