--- a/debs/puavo-os/debian/control
+++ b/debs/puavo-os/debian/control
@@ -132,6 +132,7 @@ Package: puavo-core
 Architecture: all
 Depends: ${misc:Depends},
  initramfs-tools,
+ mawk,
  puavo-conf,
  rdate,
  rsyslog-relp,
