Add mousepad launcher to Abitti-applications menu and change description.

--- a/rules/puavomenu/templates/menudata/50-default.yml
+++ b/rules/puavomenu/templates/menudata/50-default.yml
@@ -1326,7 +1326,7 @@ menus:
             sv: Abitti-applikationer
             de: Prüfungsumgebung
         description:
-            fi: Sovelluksia sähköiseen ylioppilastutkintoon
+            fi: Kokoelma Abitti-koeympäristössä käytettäviä sovelluksia
             en: Programs for Grading Environment
             de: Programme der Prüfungsumgebung
         icon: /usr/share/icons/oxygen/base/48x48/categories/applications-education.png
@@ -1342,6 +1342,7 @@ menus:
             - ti_nspire_cx_cas_ss
             - LoggerPro
             - dia
+            - mousepad
             - libreoffice-writer
             - libreoffice-calc
             - libreoffice-impress
