Do not build ruby bindings for openwsman (because that fails).

--- a/debs/openwsman/debian/rules
+++ b/debs/openwsman/debian/rules
@@ -18,7 +18,8 @@ override_dh_auto_configure:
 	  -DCMAKE_INSTALL_PREFIX=/usr \
 	  -DCMAKE_VERBOSE_MAKEFILE=TRUE \
 	  -DEXPLICIT_TARGET="$(EXPLICIT_TARGET)" \
-	  -DBUILD_RUBY_GEM=no
+	  -DBUILD_RUBY_GEM=no \
+	  -DBUILD_RUBY=no
 
 override_dh_auto_install:
 	mkdir -p debian/tmp/etc/openwsman
