--- a/rules/puavomenu/templates/menudata/50-default.yml
+++ b/rules/puavomenu/templates/menudata/50-default.yml
@@ -119,6 +119,8 @@ programs:
   #D
   - db_koulu1:
         tags: default
+  - db_koulu2:
+        tags: default
   - designer-qt4:
         name:
             en: Qt4 - graphical UI designer
@@ -1191,6 +1193,7 @@ menus:
             - ekapeli-maahanmuuttaja
             - ekapeli-alku
             - db_koulu1
+            - db_koulu2
             - gcompris
             - tuxmath
             - org.kde.kbruch
