Get the latest shorewall.conf as is from Debian Buster (shorewall version 5.2.3.2).

--- a/rules/bootserver_firewall/files/etc_shorewall/shorewall.conf
+++ b/rules/bootserver_firewall/files/etc_shorewall/shorewall.conf
@@ -33,6 +33,8 @@ FIREWALL=
 #			       L O G G I N G
 ###############################################################################
 
+LOG_LEVEL="info"
+
 BLACKLIST_LOG_LEVEL=
 
 INVALID_LOG_LEVEL=
@@ -43,29 +45,31 @@ LOG_MARTIANS=Yes
 
 LOG_VERBOSITY=2
 
+LOG_ZONE=Both
+
 LOGALLNEW=
 
-LOGFILE=/var/log/shorewall.log
+LOGFILE=/var/log/messages
 
-LOGFORMAT="%s:%s:"
+LOGFORMAT="%s %s "
 
 LOGTAGONLY=No
 
-LOGLIMIT=
+LOGLIMIT="s:1/sec:10"
 
-MACLIST_LOG_LEVEL=$PUAVO_DEFAULT_LOG_LEVEL
+MACLIST_LOG_LEVEL="$LOG_LEVEL"
 
 RELATED_LOG_LEVEL=
 
-RPFILTER_LOG_LEVEL=$PUAVO_DEFAULT_LOG_LEVEL
+RPFILTER_LOG_LEVEL="$LOG_LEVEL"
 
-SFILTER_LOG_LEVEL=$PUAVO_DEFAULT_LOG_LEVEL
+SFILTER_LOG_LEVEL="$LOG_LEVEL"
 
-SMURF_LOG_LEVEL=$PUAVO_DEFAULT_LOG_LEVEL
+SMURF_LOG_LEVEL="$LOG_LEVEL"
 
 STARTUP_LOG=/var/log/shorewall-init.log
 
-TCP_FLAGS_LOG_LEVEL=$PUAVO_DEFAULT_LOG_LEVEL
+TCP_FLAGS_LOG_LEVEL="$LOG_LEVEL"
 
 UNTRACKED_LOG_LEVEL=
 
@@ -75,7 +79,7 @@ UNTRACKED_LOG_LEVEL=
 
 ARPTABLES=
 
-CONFIG_PATH="/etc/shorewall:/usr/share/shorewall"
+CONFIG_PATH=":${CONFDIR}/shorewall:${SHAREDIR}/shorewall"
 
 GEOIPDIR=/usr/share/xt_geoip/LE
 
@@ -99,7 +103,7 @@ RESTOREFILE=restore
 
 SHOREWALL_SHELL=/bin/sh
 
-SUBSYSLOCK=
+SUBSYSLOCK=""
 
 TC=
 
@@ -107,11 +111,12 @@ TC=
 #		D E F A U L T   A C T I O N S / M A C R O S
 ###############################################################################
 
-ACCEPT_DEFAULT=none
-DROP_DEFAULT=Drop
-NFQUEUE_DEFAULT=none
-QUEUE_DEFAULT=none
-REJECT_DEFAULT=Reject
+ACCEPT_DEFAULT="none"
+BLACKLIST_DEFAULT="Broadcast(DROP),Multicast(DROP),dropNotSyn:$LOG_LEVEL,dropInvalid:$LOG_LEVEL,DropDNSrep:$LOG_LEVEL"
+DROP_DEFAULT="Broadcast(DROP),Multicast(DROP)"
+NFQUEUE_DEFAULT="none"
+QUEUE_DEFAULT="none"
+REJECT_DEFAULT="Broadcast(DROP),Multicast(DROP)"
 
 ###############################################################################
 #			 R S H / R C P	C O M M A N D S
@@ -138,13 +143,13 @@ AUTOCOMMENT=Yes
 
 AUTOHELPERS=Yes
 
-AUTOMAKE=No
+AUTOMAKE=Yes
+
+BALANCE_PROVIDERS=No
 
 BASIC_FILTERS=No
 
-BLACKLIST="NEW,INVALID"
-
-CHAIN_SCRIPTS=Yes
+BLACKLIST="NEW,INVALID,UNTRACKED"
 
 CLAMPMSS=No
 
@@ -180,15 +185,11 @@ IGNOREUNKNOWNVARIABLES=No
 
 IMPLICIT_CONTINUE=No
 
-INLINE_MATCHES=No
-
 IPSET_WARNINGS=Yes
 
-IP_FORWARDING=On
+IP_FORWARDING=Keep
 
 KEEP_RT_TABLES=No
-
-LOAD_HELPERS_ONLY=No
 
 MACLIST_TABLE=filter
 
@@ -196,13 +197,9 @@ MACLIST_TTL=
 
 MANGLE_ENABLED=Yes
 
-MAPOLDACTIONS=No
-
 MARK_IN_FORWARD_CHAIN=No
 
 MINIUPNPD=No
-
-MODULE_SUFFIX=ko
 
 MULTICAST=No
 
@@ -210,15 +207,19 @@ MUTEX_TIMEOUT=60
 
 NULL_ROUTE_RFC1918=No
 
-OPTIMIZE=0
+OPTIMIZE=All
 
 OPTIMIZE_ACCOUNTING=No
 
+PERL_HASH_SEED=0
+
 REJECT_ACTION=
+
+RENAME_COMBINED=Yes
 
 REQUIRE_INTERFACE=No
 
-RESTART=reload
+RESTART=restart
 
 RESTORE_DEFAULT_ROUTE=Yes
 
@@ -238,11 +239,13 @@ TC_EXPERT=No
 
 TC_PRIOMAP="2 3 3 3 2 3 1 1 2 2 2 2 2 2 2 2"
 
-TRACK_PROVIDERS=No
+TRACK_PROVIDERS=Yes
 
 TRACK_RULES=No
 
-USE_DEFAULT_RT=No
+USE_DEFAULT_RT=Yes
+
+USE_NFLOG_SIZE=No
 
 USE_PHYSICAL_NAMES=No
 
@@ -256,7 +259,7 @@ WORKAROUNDS=No
 
 ZERO_MARKS=No
 
-ZONE2ZONE=2
+ZONE2ZONE=-
 
 ###############################################################################
 #			P A C K E T   D I S P O S I T I O N
