Set CONFIG_PATH explicitly in shorewall.conf so that shorewall actually works.

--- a/rules/bootserver_firewall/files/etc_shorewall/shorewall.conf
+++ b/rules/bootserver_firewall/files/etc_shorewall/shorewall.conf
@@ -79,7 +79,7 @@ UNTRACKED_LOG_LEVEL=
 
 ARPTABLES=
 
-CONFIG_PATH=":${CONFDIR}/shorewall:${SHAREDIR}/shorewall"
+CONFIG_PATH="/etc/shorewall:/usr/share/shorewall"
 
 GEOIPDIR=/usr/share/xt_geoip/LE
 
