Add Zoom menu item.

--- a/rules/puavomenu/templates/menudata/50-default.yml
+++ b/rules/puavomenu/templates/menudata/50-default.yml
@@ -1051,6 +1051,8 @@ programs:
         tags: default, internet, audio, video
 
   #Z
+  - Zoom:
+        tags: default, internet
 
 # ------------------------------------------------------------------------------
 
@@ -1141,6 +1143,7 @@ menus:
             - dropbox
             - nextcloud
             - VidyoDesktop
+            - Zoom
 
   - menu-programming:
         name:
