--- a/parts/ers/Vagrantfile
+++ b/parts/ers/Vagrantfile
@@ -12,13 +12,14 @@ Vagrant.configure("2") do |config|
   config.vm.provider :virtualbox do |vb|
     vb.name = 'Puavo ERS'
     vb.gui = true
-    vb.customize [ 'modifyvm', :id, '--ioapic',      'on'            ]
-    vb.customize [ 'modifyvm', :id, '--cpus',        2               ]
-    vb.customize [ 'modifyvm', :id, '--memory',      2048            ]
-    vb.customize [ 'modifyvm', :id, '--nictype1',    'virtio'        ]
-    vb.customize [ 'modifyvm', :id, '--clipboard',   'bidirectional' ]
-    vb.customize [ 'modifyvm', :id, '--vram',         24             ]
-    vb.customize [ 'modifyvm', :id, '--description', 'digabi/ktp-qa' ]
+    vb.customize [ 'modifyvm',     :id, '--ioapic',       'on'            ]
+    vb.customize [ 'modifyvm',     :id, '--cpus',         2               ]
+    vb.customize [ 'modifyvm',     :id, '--memory',       2048            ]
+    vb.customize [ 'modifyvm',     :id, '--nictype1',     'virtio'        ]
+    vb.customize [ 'modifyvm',     :id, '--clipboard',    'bidirectional' ]
+    vb.customize [ 'modifyvm',     :id, '--vram',          24             ]
+    vb.customize [ 'modifyvm',     :id, '--description',  'digabi/ktp-qa' ]
+    vb.customize [ 'setextradata', :id, 'GUI/Fullscreen', 'true'          ]
   end
 
   config.vm.synced_folder '~/ktp-jako', '/media/usb1', id: 'media_usb1'
