Add Kahoot to web-apps.

--- a/rules/puavomenu/templates/menudata/50-default.yml
+++ b/rules/puavomenu/templates/menudata/50-default.yml
@@ -1424,6 +1424,7 @@ menus:
             - sumopaint
             - walma
             - pahvi
+            - kahoot
             - sanomapro
             - otava
             - ekapeliweb
