--- a/parts/ers/puavo-startup-ers.desktop
+++ b/parts/ers/puavo-startup-ers.desktop
@@ -2,7 +2,7 @@
 Version=1.0
 Name=Puavo ERS
 Comment=Puavo ERS
-Exec=puavo-ers
+Exec=puavo-startup-ers
 Terminal=false
 Type=Application
 Categories=Utility;
