Put puavo-ers into a package and install it into system.

--- a/debs/puavo-os/debian/control
+++ b/debs/puavo-os/debian/control
@@ -175,6 +175,17 @@ Description: Puavo lxc developer tools
  Few scripts to manage lxc containers
  .
 
+Package: puavo-ers
+Architecture: all
+Depends: ${misc:Depends},
+ tcl8.6,
+ tcllib,
+ tk8.6
+Description: Puavo Examination Room Server
+ A script for managing virtual machines for examination room servers
+ (currently Abitti KTP).
+ .
+
 Package: puavo-hw-log
 Architecture: any
 Depends: ${misc:Depends}, ruby, ohai
