--- a/rules/puavomenu/templates/menudata/50-default.yml
+++ b/rules/puavomenu/templates/menudata/50-default.yml
@@ -988,8 +988,13 @@ programs:
         url: http://dreamschool.fi
         icon: /opt/puavomenu/icons/unelmakoulu.png
         tags: default, education
+  - unityhub:
+        tags: default
+        condition: "personally_administered"
 
   #V
+  - veracrypt:
+        tags: default
   - VidyoDesktop:
         name: VidyoDesktop
         tags: default
@@ -1102,6 +1107,7 @@ menus:
             - gftp
             - filezilla
             - seahorse
+            - veracrypt
             - system-config-printer
             - pavucontrol
             - org.gnome.Screenshot
