Add "puavo-ers-applet" that currently provides only password copy-paste -functionality for puavo-ers.  I think it is probably better to move some of the current puavo-ers functionality to this applet.

--- a/parts/ers/Makefile
+++ b/parts/ers/Makefile
@@ -19,8 +19,10 @@ installdirs:
 
 .PHONY: install
 install: installdirs
-	$(INSTALL_PROGRAM) -t $(DESTDIR)$(bindir) puavo-ers puavo-startup-ers
-	$(INSTALL_DATA) -t $(DESTDIR)$(sysconfdir)/xdg/autostart puavo-startup-ers.desktop
+	$(INSTALL_PROGRAM) -t $(DESTDIR)$(bindir) puavo-ers puavo-ers-applet \
+		puavo-startup-ers
+	$(INSTALL_DATA) -t $(DESTDIR)$(sysconfdir)/xdg/autostart \
+		puavo-ers-applet.desktop puavo-startup-ers.desktop
 
 .PHONY: clean
 clean:
