--- a/parts/ers/puavo-ers-startup.desktop
+++ b/parts/ers/puavo-ers-startup.desktop
@@ -1,8 +1,8 @@
 [Desktop Entry]
 Version=1.0
-Name=Puavo ERS Applet
-Comment=Puavo ERS Applet
-Exec=puavo-ers-applet
+Name=Puavo ERS
+Comment=Puavo ERS
+Exec=puavo-ers-startup
 Terminal=false
 Type=Application
 Categories=Utility;
