"firefox-esr" --> "firefox" -fixes to some places.

--- a/rules/puavomenu/templates/menudata/50-default.yml
+++ b/rules/puavomenu/templates/menudata/50-default.yml
@@ -1149,7 +1149,7 @@ menus:
             sv: Internet-program
             de: Internet Programme
         programs:
-            - firefox-esr
+            - firefox
             - chromium
             - google-chrome
             - epiphany
