--- a/debs/Makefile
+++ b/debs/Makefile
@@ -6,7 +6,8 @@ _pkgs_builddeps := sblim-sfcc openwsman
 _pkgs_parts := puavo-ds puavo-os
 # XXX gvfs not added to build, because it is unclear
 # XXX if there is any benefit to do so
-_pkgs_ports := gnome-shell \
+_pkgs_ports := fmit        \
+               gnome-shell \
                grub2       \
                incron      \
                mutter      \
