--- a/parts/pkg/packages/Makefile
+++ b/parts/pkg/packages/Makefile
@@ -16,6 +16,7 @@ packagedirs += arduino-tm1637
 packagedirs += bluegriffon
 # XXX do not build, not ready # packagedirs += casio-classpad-manager-for-ii
 packagedirs += canon-cque
+packagedirs += celestia
 packagedirs += cmaptools
 packagedirs += cnijfilter2
 packagedirs += cura-appimage
