--- a/rules/puavomenu/templates/menudata/50-default.yml
+++ b/rules/puavomenu/templates/menudata/50-default.yml
@@ -494,8 +494,8 @@ programs:
   - mscore:
         name:
             en: MuseScore-music composition & notation
-            fi: Nuotinnusohjelma
-            sv: Notering
+            fi: MuseScore-nuotinnusohjelma
+            sv: MuseScore-notering
             de: Musik-Notensatz
         tags: default, audio
   - mypaint:
@@ -1165,6 +1165,7 @@ menus:
             - evolution
             - pidgin
             - gftp
+            - filezilla
             - net.sourceforge.liferea
             - google-earth
             - skype
