Add menu entry for Tracker physics application.

--- a/rules/puavomenu/templates/menudata/50-default.yml
+++ b/rules/puavomenu/templates/menudata/50-default.yml
@@ -954,6 +954,8 @@ programs:
         tags: default
         puavopkg:
             id: tilitin
+  - tracker:
+        tags: default
   - tuxguitar:
         name:
             en: TuxGuitar-multitrack tablature editor
@@ -1247,6 +1249,7 @@ menus:
             - stellarium
             - org.kde.kstars
             - org.kde.step
+            - tracker
             - LoggerPro
             - GlobiLab
             - wxMaxima
@@ -1448,6 +1451,7 @@ menus:
         icon: /usr/share/icons/hicolor/64x64/apps/step.png
         programs:
             - org.kde.step
+            - tracker
             - LoggerPro
             - libreoffice-writer
             - phet
