Add Eclipse as a puavo-pkg package (with C/CPP, Java, Javascript and PHP components).  We do not plan to install this by default, as it takes about half a gigabyte uncompressed as is needed only by a few.

--- a/rules/puavomenu/templates/menudata/50-default.yml
+++ b/rules/puavomenu/templates/menudata/50-default.yml
@@ -148,7 +148,13 @@ programs:
         tags: default
 
   #E
-  - eclipse:
+  - eclipse-cpp:
+        tags: default
+  - eclipse-java:
+        tags: default
+  - eclipse-javascript:
+        tags: default
+  - eclipse-php:
         tags: default
   - edison:
         type: web
@@ -1189,7 +1195,10 @@ menus:
             - drracket
             - enchanting
             - bluegriffon
-            - eclipse
+            - eclipse-cpp
+            - eclipse-java
+            - eclipse-javascript
+            - eclipse-php
             - eric6
             - pycharm
             - spe
