--- a/parts/pkg/packages/Makefile
+++ b/parts/pkg/packages/Makefile
@@ -23,6 +23,7 @@ packagedirs += cura-appimage
 packagedirs += dropbox
 packagedirs += dragonbox_koulu1
 packagedirs += dragonbox_koulu2
+packagedirs += eclipse
 packagedirs += ekapeli-alku
 packagedirs += enchanting
 packagedirs += extra-xkb-symbols
