Add Netbeans (as an optional component via puavo-pkg package).

--- a/parts/pkg/packages/Makefile
+++ b/parts/pkg/packages/Makefile
@@ -42,6 +42,7 @@ packagedirs += mafynetti
 packagedirs += marvinsketch
 packagedirs += mattermost-desktop
 packagedirs += msttcorefonts
+packagedirs += netbeans
 packagedirs += nightcode
 packagedirs += ohjelmointi-opetuksessa
 packagedirs += openscad-nightly
