Add MuseScore appimage version to menu.

--- a/rules/puavomenu/templates/menudata/50-default.yml
+++ b/rules/puavomenu/templates/menudata/50-default.yml
@@ -498,6 +498,13 @@ programs:
             sv: MuseScore-notering
             de: Musik-Notensatz
         tags: default, audio
+  - musescore-appimage:
+        name:
+            en: MuseScore-music composition & notation
+            fi: MuseScore-nuotinnusohjelma
+            sv: MuseScore-notering
+            de: Musik-Notensatz
+        tags: default, audio
   - mypaint:
         icon: /usr/share/icons/hicolor/48x48/apps/mypaint.png
         tags: default, graphics
