Add musescore to audio menu.

--- a/rules/puavomenu/templates/menudata/50-default.yml
+++ b/rules/puavomenu/templates/menudata/50-default.yml
@@ -1327,6 +1327,7 @@ menus:
             - shotcut
             - solfege
             - mscore
+            - musescore-appimage
             - hydrogen
             - lmms
             - rosegarden
