Fix nautilus path for ktp-jako.

--- a/rules/puavomenu/templates/menudata/60-ktp.yml
+++ b/rules/puavomenu/templates/menudata/60-ktp.yml
@@ -13,7 +13,7 @@ programs:
   - koejakaja:
         type: web
         name: Opinsys Koejakaja
-        url:  https://koejakaja.opinsys.fi
+        url:  https://koepalvelin.opinsys.fi
         description: Koejakaja
         icon: alacarte
         tags: default, internet, education
@@ -21,7 +21,7 @@ programs:
   - ktp-jako:
         type: custom
         name: Ktp-jako-kansio
-        command:  "nautilus ~/ktp-jako"
+        command:  "nautilus /home/puavo-ers/ktp-jako"
         description: Ktp koe-kansio
         icon: /usr/share/icons/Faenza/places/64/folder-documents.png
         tags: default, internet, education
