Use "mutter" instead of "openbox" in digital signage screens.
There are some visible tearing effects with Openbox as it does
not do compositing.  This can be seen during some video playback.
Mutter does compositing and behaves better.  But Mutter may not
be an ideal solution idea, however, this is a step in the right
direction.  Closes #527.

--- a/debs/puavo-os/debian/control
+++ b/debs/puavo-os/debian/control
@@ -324,12 +324,12 @@ Depends: ${misc:Depends},
  libpam-runtime,
  libsasl2-modules-gssapi-mit,
  libsasl2-modules-ldap,
+ mutter,
  netcat-openbsd,
  nfs-common,
  nslcd,
  ntp,
  ntpdate,
- openbox,
  perl,
  puavo-client,
  puavo-conf,
