Add "mypaint" to build, because we need a patch so that it does not conflict with Gimp and then we can also install it.

--- a/debs/Makefile
+++ b/debs/Makefile
@@ -11,6 +11,7 @@ _pkgs_ports := fmit        \
                grub2       \
                incron      \
                mutter      \
+               mypaint     \
                nbd         \
                openboard   \
                openldap    \
