Add "libmypaint" to the build (because we need to remove the conflict with "mypaint").

--- a/debs/Makefile
+++ b/debs/Makefile
@@ -10,6 +10,7 @@ _pkgs_ports := fmit        \
                gnome-shell \
                grub2       \
                incron      \
+               libmypaint  \
                mutter      \
                mypaint     \
                nbd         \
