Compile "pinta" (from the current version in "unstable").

--- a/debs/Makefile
+++ b/debs/Makefile
@@ -16,6 +16,7 @@ _pkgs_ports := fmit        \
                nbd         \
                openboard   \
                openldap    \
+               pinta       \
                vtun        \
                wine        \
                wsmancli
