Remove puavo.nonfree.* variables and puavo-pkg tweaks regarding them.  Proprietary stuff should not need this kind of tricks, we just leave these out of the system image and then they can be optionally installed where needed.

--- a/rules/puavomenu/templates/conditions/50-default.yml
+++ b/rules/puavomenu/templates/conditions/50-default.yml
@@ -11,8 +11,8 @@
 - name: ti_nspire_cx_cas
   function: puavo_conf
   params:
-    - name: puavo.nonfree.ti_nspire_cx_cas_ss.enabled
-      value: "true"
+    - name: puavo.pkg.ti-nspire-cx-cas-ss
+      value: "install"
 
 - name: only_teacher_admin
   function: env_var
