Do not create /boot/efi in puavo-install-grub, make sure it is in the image (because when puavo-install-grub is run during updates, it may not have write access to create /boot/efi).

--- a/parts/ltsp/puavo-install/Makefile
+++ b/parts/ltsp/puavo-install/Makefile
@@ -21,6 +21,7 @@ installdirs :
 	mkdir -p $(DESTDIR)$(datarootdir)/puavo-ltsp-install
 	mkdir -p $(DESTDIR)$(libdir)/puavo-ltsp-install
 	mkdir -p $(DESTDIR)$(sbindir)
+	mkdir -p $(DESTDIR)/boot/efi    # needed by puavo-install-grub
 	mkdir -p $(DESTDIR)/images      # needed by puavo-image-preinst
 	mkdir -p $(DESTDIR)/lib/systemd/system
 	mkdir -p $(DESTDIR)$(sysconfdir)/systemd/system/multi-user.target.wants
