Add "libvirt-daemon-system" to the list of puavo-bootserver dependencies (so we can have a functioning libvirtd).

--- a/debs/puavo-os/debian/control
+++ b/debs/puavo-os/debian/control
@@ -238,6 +238,7 @@ Depends: ${misc:Depends},
  libsasl2-modules-gssapi-mit,
  libvirt-clients,
  libvirt-daemon,
+ libvirt-daemon-system,
  logrotate,
  lynx,
  nbd-server,
